tests/baselines/reference/parserClassDeclaration15.errors.txt
parserClassDeclaration15.ts(2,4): error TS2391: Function implementation is missing or not immediately following the declaration.


==== parserClassDeclaration15.ts (1 errors) ====
    class C {
       foo();
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
       constructor() { }
    }